# RLPE-Radiolarian-Plate-Extractor

./: BEAUTY_IMPROVEMENTS.md  BEAUTY_UPDATE_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPARISON_CLI_VS_WEB.md  COMPLETION_CONFIRMATION.md  DELIVERY_SUMMARY.md  DEPLOY_QUICK_START.md  FILE_CHECKLIST.md  INDEX.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  QUICK_REFERENCE_BEAUTY.md  README.md  RESPONSIVE_TEST_GUIDE.md  WEB_ARCHITECTURE.md  WEB_CHANGES_SUMMARY.md  WEB_GUIDE.md  pyproject.toml  requirements.txt  run_web_server.bat  run_web_server.py  run_web_server.sh
scripts/: evaluate.py  gemma_batch_postprocess.py  gemma_notebook_main.py  run_grobid.py  run_pipeline.py  segment_panels.py  train_matcher.py  train_taxon_ner.py
src/rlpe/: __init__.py  association.py  batch.py  bootstrap.py  cli.py  config.py  config_io.py  evaluation.py  export.py  gemma_postprocess.py  geology_extraction.py  grobid.py  io.py  layout.py  llm_backends.py  matching.py  metrics.py  ocr.py  pipeline.py  preprocess.py  scale_bar.py  segmentation.py  taxon.py  tei.py  types.py  utils.py
src/rlpe/api/: __init__.py  app.py
src/rlpe/worker/: __init__.py  tasks.py
web/: index.html
web/css/: style.css
web/js/: app.js
